@@ -994,6 +994,8 @@ class TestCaseWithComplexRepository(TestCaseWithRepository):
         try:
             self.assertRaises(errors.ReservedId, repo.add_inventory, 'reserved:',
                               None, None)
+            self.assertRaises(errors.ReservedId, repo.add_inventory_delta,
+                "foo", [], 'reserved:', None)
             self.assertRaises(errors.ReservedId, repo.add_revision, 'reserved:',
                               None)
         finally:
